package com.zenika.zacademy.display;

public interface Displayer {

    void print(Object objectToDisplay);
}
